@@ -20,6 +20,11 @@ It also ensures that the library can avoid the performance pitfall created by
 [4] Fixed visual artifacts in grayscale JPEG compression caused by a typo in
 the RGB-to-chrominance lookup tables.
 
+[5] The Windows distribution packages now include the libjpeg run-time programs
+(cjpeg, etc.)
+
+[6] All packages now contain jpgtest.
+
 
 1.0.90 (1.1 beta1)
 ==================
